--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-PyMuPDF
-tensorflow
-opencv-python
-numpy
-Pillow
-reportlab
+streamlit==1.27.0
+PyMuPDF==1.22.5
+tensorflow==2.13.0
+opencv-python==4.10.0.76
+numpy==1.25.2
+Pillow==10.1.0
+reportlab==4.0
